# cpuMiningProjectCpp

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
src/abstractions/: serializedToString.h
src/adapters/: bitcoinAdapter.cpp  bitcoinAdapter.h
src/adapters/requests/blockCount/: BlockCountRequest.cpp  BlockCountRequest.h
src/adapters/requests/blockTemplate/: BlockTemplateRequest.cpp  BlockTemplateRequest.h
src/adapters/requests/listunspent/: ListUnspentRequest.cpp  ListUnspentRequest.h
src/adapters/requests/miningInfo/: MiningInfoRequest.cpp  MiningInfoRequest.h
src/adapters/requests/submitBlock/: SubmitBlockRequest.cpp  SubmitBlockRequest.h
src/adapters/response/blockCount/: blockCountResponse.cpp  blockCountResponse.h
src/adapters/response/blockTemplate/: BlockTemplateResponse.cpp  BlockTemplateResponse.h  CoinBaseTxn.cpp  CoinBaseTxn.h  Transaction.cpp  transaction.h
src/adapters/response/listunspent/: ListUnspentResponse.cpp  ListUnspentResponse.h
src/adapters/response/miningInfo/: miningInfoResponse.cpp  miningInfoResponse.h
src/adapters/response/submitBlock/: submitBlockResponse.cpp  submitBlockResponse.h
src/core/: BitcoinMainFunctions.cpp  BitcoinMainFunctions.h
src/utils/: VarInt.cpp  VarInt.h
tests/: test_main.cpp
